# fin-analysis-rag

./: .gitignore  Dockerfile  README.md  chatbot.py  docker-compose.yml  pyproject.toml  simple_rag.ipynb
app/: models.py  rag_api.py  settings.py
